kube-scripts/miahoot-back-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --file docker-compose.yaml --out ./kube-scripts/
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: miahoot-back
  name: miahoot-back
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: miahoot-back
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --file docker-compose.yaml --out ./kube-scripts/
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/miahoot-deploy-default: "true"
        io.kompose.service: miahoot-back
    spec:
      containers:
        - env:
            - name: DATABASE_ADDRESS
              value: postgres
          image: miahoot/miahoot-back
          name: miahoot-back
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
