kube-scripts/miahoot-front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: miahoot-front
  name: miahoot-front
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: miahoot-front
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yaml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/miahoot-deploy-default: "true"
        io.kompose.service: miahoot-front
    spec:
      containers:
        - image: miahoot/miahoot-front
          name: miahoot-front
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
